--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ min-width:220px;
       <div class="team-member">
         <div class="member-name">Investor</div>
         <div class="member-quote">
-          <span class="confident-text">Ahmed Waleed</span>
+          <span class="confident-text"></span>
         </div>
       </div>
     </div>
@@ -376,4 +376,5 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
